--- a/src/output.css
+++ b/src/output.css
@@ -691,6 +691,10 @@ video {
   margin-left: 1.25rem;
 }
 
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
 .inline-block {
   display: inline-block;
 }
@@ -749,6 +753,33 @@ video {
 
 .gap-4 {
   gap: 1rem;
+}
+
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+}
+
+.gap-y-8 {
+  row-gap: 2rem;
+}
+
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+
+.gap-x-8 {
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
+}
+
+.gap-y-12 {
+  row-gap: 3rem;
+}
+
+.gap-y-10 {
+  row-gap: 2.5rem;
 }
 
 .rounded-md {
@@ -976,6 +1007,10 @@ video {
 
 .\*\:p-4 > * {
   padding: 1rem;
+}
+
+.\*\:text-right > * {
+  text-align: right;
 }
 
 .hover\:bg-red-500:hover {
